# sensor_lab

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  clang-format.bash  my_projects_show.md  resume.md
algorithm/: CMakeLists.txt  ICP.md  PCA.md  biased_unbiased_estimates_variance.md  cubic_spline_interpolation.md  gauss_newton_method.md  hand_eye_calibration.md  least_square_curve_fit.md  mahalanobis_distance.md  monocular_stereo_camera_calib.md  交并比与极大值抑制.md  双目立体匹配.md  数值微分验证jacobian.md  点到射线距离_垂点位置.md  移动最小二乘.md  薄板样条插值TPS.md  设计一个SLAM系统.md
algorithm/test/: bilinear_interpol_test.cc  camera_calibration.cc  cubic_spline_test.cc  cv_gl_projection_test.cc  dlt_camera_calibration_test.cc  least_square_polynomial_curve_fit_test.cc  mahalanobis_distance_test.cc  moving_lest_squares_test.cc  non_maximun_suppression_test.cc  tps_test.cc  tsai_lenz_eye_in_hand.cc  undistortion_test.cc
cere_test/: 1.ceres_derivatives.md  2.lossfunction.md  3.bundle_adjustment.md  4.ceres_solver_type.md  CMakeLists.txt
cere_test/include/: bal_problem.h  snavely_reprojection_error.h
cere_test/src/: bal_problem.cc
cere_test/test/: bundle_adjuster.cc  bundle_adjustment_simple.cc  cere_linear_test.cc  curve_fitting.cc  powell.cc  slam_book2_curve_fit.cc
cpp_test/: CMakeLists.txt  bind_and_function.md  bind_function_test.cc  cpp_14_some_features.md  cpp_17_some_features.md  cpp_20_constrains_and_concepts.md  cpp_20_coroutine.md  cpp_20_some_features.md  diy_smart_ptr.hpp  diy_smart_ptr_test.cc  left_value_right_value_test.cc  read_shared_memory.cc  template_test.cc  variadic_templates_test.cc  write_shared_memory.cc  左值右值_左右引用_移动语义和完美转发.md  智能指针.md
cpp_test/note/: bind_and_function.md  cpp_14_some_features.md  cpp_17_some_features.md  cpp_20_constrains_and_concepts.md  cpp_20_module.md  enable_shared_form_this_&_shared_form_this.md  lambda可能的实现方式与捕获.md  this_ptr.md  可变参数实现泛型工厂.md  智能指针.md  智能指针内存泄漏与前向声明内存泄漏.md  模板实现为什么一般都放在头文件中.md
dense_mapping/: CMakeLists.txt  dense_mapping.md  slam常用坐标变换表示.md
dense_mapping/test/: mono_dense_mapping.cc  rgbd_dense_mapping.cc
feature_detect/: CMakeLists.txt  fast_corners_detect.md  orb_feature_detect.md  vslam_feature_flow_direct.md
feature_detect/include/: HS_optical_flow.h  LK_optical_flow.h  ctf_LK_optical_flow.h  feature_detect.h  orb_cv.h  orb_my.h
feature_detect/src/: HS_optical_flow.cc  LK_optical_flow.cc  ctf_LK_optical_flow.cc  orb_cv.cc  orb_my.cc
feature_detect/test/: InverseCompositional.cc  inverse_compositional_test.cc  optical_flow_test.cc  orb_cv_test.cc
feature_tracker/: CMakeLists.txt
feature_tracker/include/: camera.h  feature_tracker.h  pinhole_camera.h
feature_tracker/launch/: vins_rviz.launch
feature_tracker/src/: camera.cc  feature_tracker.cc  pinhole_camera.cc
feature_tracker/test/: check_rosbag_images.cc
g2o_test/: CMakeLists.txt  g2o_functions.md  g2o_note.md
g2o_test/test/: curve_fitting_test.cc
gtsam_test/: CMakeLists.txt  gtsam.md  gtsam_introduction.md
gtsam_test/include/: SFMdata.h
gtsam_test/test/: localization_example.cc  planar_slam_example.cc  pose2_slam_example.cc  v_slam_with_isam2_example.cc  v_slam_with_isam_example.cc
imu_and_gnss/: CMakeLists.txt  eskf.md  imu_image_timestamp_align.md  imu_model.md  imu_model_and_gnss.md  imu_preintegration_1.md  imu_preintegration_2.md  imu_preintegration_3.md  imu_preintegration_review.md  mono_code_pre_integration_flow.md  pre_integration_flow.md  pre_integration_gins_1.md  pre_integration_gins_2.md
imu_and_gnss/common/: eigen_types.h  gnss.h  io_utils.cc  io_utils.h  math_utils.h  nav_state.h
imu_and_gnss/include/: based_imu_pre_integration_gins.h  eskf.hpp  g2o_preintegration_types.h  imu_integration.h  imu_preintegration.h  static_imu_init.h  utm_convert.h
imu_and_gnss/script/: imu_integration_state.py
imu_and_gnss/src/: based_imu_pre_integration_gins.cc  g2o_preintegration_types.cc  imu_integration.cc  imu_preintegration.cc  static_imu_init.cc  utm_convert.cc
imu_and_gnss/test/: gnss_data_test.cc  gtest_preintegration.cc  imu_integration_test.cc  run_eskf_gins.cc  run_gins_pre_integ.cc
kalman_filter/: CMakeLists.txt  discrete_kalman_filter.md  extended_kalman_filter.md  particle_filter.md  sr_ukf.md  ukf.md  unscented_transform.md
kalman_filter/include/: discrete_kalman_filter.h  ekf_sample.h  kalman_filter.h  kalman_filter.hpp  square_root_ukf.hpp  types.h  types.hpp  unscented_kalman_filter.hpp  unscented_transform.hpp  util.hpp
kalman_filter/src/: discrete_kalman_filter.cc  ekf.cc  ekf_sample.cc
kalman_filter/test/: discrete_kalman_filter_test.cc  ekf_py_test.py  kf_state_estimation.cc  range_sensor_ekf_sample_test.cc  range_sensor_ekf_test.cc  sr_ukf_linear_function.cc  ukf_test.cc  unscented_transform_test.cc
lidar_2d/: 2dSLAM.md  CMakeLists.txt  bresenham.md  lidar运动补偿_反光.md  likelihood_field.md  likelihood_filed.md
lidar_2d/include/: frame.h  g2o_types.h  icp_2d.h  lidar_2d_utils.h  likelihood_field.h  likelihood_filed.h  loop_closing.h  mapping_2d.h  multi_resolution_likelihood_field.h  occupancy_map.h  submap.h
lidar_2d/src/: frame.cc  icp_2d.cc  lidar_2d_utils.cc  likelihood_field.cc  likelihood_filed.cc  loop_closing.cc  mapping_2d.cc  multi_resolution_likelihood_field.cc  occupancy_map.cc  submap.cc
lidar_2d/test/: 2d_icp_s2s_test.cc  2dlidar_io_test.cc  likelihood_field_icp_test.cc  (+3 more)
lidar_3d/: CMakeLists.txt  基于四元数球面线性插值的imu运动补偿.md  基于离线地图的实时定位.md  松耦合ESKF_loosely_LIO.md  特征法LO.md  直接NDT与增量NDT.md  离线地图构建.md  紧耦合.md
loop_closure/: CMakeLists.txt  DBoW3.md
path_plan/: CMakeLists.txt  a_star.md  b_spline_curve.md  bezier_curve.md  dijkstra.md  dubins_curve.md  dwa.md  floyd最短路径算法.md  path_plan.md  reed_shepp_curve.md  rrt.md
path_tracking/: CMakeLists.txt  LQR.md  MPC.md  path_tracking.md  pid_controller.md  pure_pursuit.md  stanley.md
pcl_test/: CMakeLists.txt  point_cloud_test.cc
pose_estimation/: CMakeLists.txt  DLT_PNP.md  gtsam.md  triansgulation.md  对极几何epipolar_constrainc.md
task/: CMakeLists.txt  SLAM位姿优化时误差函数雅可比矩阵的计算.md  SO3_SE3_so3_se3.md  local_build_sophus.md  旋转矩阵_左乘扰动右乘扰动模型.md
(+266 files in other folders)
